# ShrinkLog

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  buildDockerImage.sh  main.cpp
Common/: ArgEncoder.cpp  ArgEncoder.h  TypeConfigLoader.h
ExampleProject/: main.c
ExampleProject/subdir/: tf_arguments.h  tf_comment_initial1.h  tf_comment_middle1.h  tf_comment_middle2.h  tf_multiline_strings.h
ExampleProject/subdir/nested/: tf_simple.h
ExampleProject/subdir/nested/nested/: tf_simple.h
LogDecoder/: main.cpp
LogDecoder/src/: Decoder.cpp  Decoder.h  DescriptorChunker.cpp  DescriptorChunker.h  DescriptorCleaner.cpp  DescriptorCleaner.h  File.cpp  File.h  MessageDescriptor.cpp  MessageDescriptor.h  MessageDescriptorStorage.cpp  MessageDescriptorStorage.h  TextFile.cpp  TextFile.h
LogDecoder/tests/slog/: map.slog
ProjectProcessor/: main.cpp
ProjectProcessor/src/: ArgEncoder.cpp  ArgEncoder.h  ArgToBytesCount.cpp  ArgToBytesCount.h  LoadConfig.h  ProjectProcessor.cpp  ProjectProcessor.h  ThreadPool.h
ProjectProcessor/tests/testproj/: tf_arguments.c  tf_comment_final1.c  tf_comment_final2.c  tf_comment_initial1.c  tf_comment_initial2.c  tf_comment_middle1.c  tf_comment_middle2.c  tf_multiline_strings.c
ProjectProcessor/tests/testproj/nested/nested/: tf_simple.c
Scripts/: BuildDockerImage.sh  BuildShrinkLog.sh  DecodeLogs.sh  Install.sh  ProcessProject.sh  RunExampleProject.sh
Scripts/Utils/: PrintStatus.sh
TargetLib/TypeConfigs/: TypeSizeDiscovery.h
TargetLib/TypeConfigs/default/: TypeConfig.yaml
TargetLib/slog/: ShringLog.h  ShrinkLog.h  TypeConfig.yaml
TestProject/: ProcessAndRunTestProject.sh  main.c
TestProject/slog/: ShringLog.h  Tags.h
TestProject/subdir/: tf_comment_final1.h  tf_comment_final2.h  tf_comment_initial2.h  tf_log_function_placement.ignore_tbd
src/: ArgToBytesCount.cpp  ArgToBytesCount.h  IntfMasterMap.cpp  IntfMasterMap.h  LoadConfig.h  ProjectProcessor.cpp  ProjectProcessor.h  ShrinkLog.cpp  ShrinkLog.h  ThreadPool.cpp  ThreadPool.h
src/testproj/: testfile.c  testfile_arguments.c
targetLib/slog/: ShringLog.h
